hero section added

--- a/index.html
+++ b/index.html
@@ -31,6 +31,13 @@
             </div>
 
         </nav>
+        <div class="hero-section bg-[linear-gradient(90deg,rgba(1,49,34,1),rgba(0,103,71,1)_50%,rgba(1,50,35,1)_100%)] text-white text-center px-4 md:px-0">
+            <div class="items-center flex flex-col justify-center">
+                <img src="assets/logo-dark.png" class="max-w-[92px] h-[92px] mt-[32px]" alt="">
+                <h1 class="text-[40px] font-bold">Emergency Service Directory</h1>
+                <p class="text-[20px] font-semibold">Government Emergency Services at Your Fingertip – A Project by  Government of the People’s Republic of Bangladesh</p>
+            </div>
+        </div>
     </header>
 
     <script src="./script.js"></script>
